--- a/design/templates/OpenGame/metamatter.tpl.html
+++ b/design/templates/OpenGame/metamatter.tpl.html
@@ -1,23 +1,16 @@
-<h2>{PAGE_HEADER}</h2>
+<!-- IF ! $TABLE_WIDTH -->
+  <!-- DEFINE $TABLE_WIDTH = "519px" -->
+  <h2>{PAGE_HEADER}</h2>
+<!-- ENDIF -->
 
 <!-- INCLUDE _result_message -->
 
 <script type="text/javascript">
   var LA_sys_show = "{LA_sys_show}";
   var LA_sys_hide = "{LA_sys_hide}";
-  /*
-   function sn_show_hide(element, element_name)
-   {
-   var element_to_hide = jQuery("#" + element_name);
-   var tag_name = element_to_hide[0].tagName;
-
-   element_to_hide.css('display', element_to_hide.css('display') == 'none' ? (tag_name == 'TR' ? 'table-row' : (tag_name == 'UL' || tag_name == 'DIV' ? 'block' : 'inline')) : 'none');
-   jQuery(element).html("[&nbsp;" + (element_to_hide.css('display') == 'none' ? "{LA_sys_show}" : "{LA_sys_hide}") + "&nbsp;]");
-   }
-   */
 </script>
 
-<table width="519">
+<table width="{$TABLE_WIDTH}">
   <tr class="c_j">
     <th>
       {L_sys_metamatter_what_header}
