--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -113,13 +113,14 @@
       </tr>
       <tr>
         <th>{L_skins_example}</th>
-        <td class="c_l"><input name="design"{opt_sskin_data} type="checkbox" id="design" /> <label for="design">{L_opt_chk_skin}</label><br>
-          <input name="dpath" maxlength="80" size="28" value="{OPT_DPATH_DATA}" type="text">&nbsp;<select name="dpaths" size="1" onchange="document.fOptions.dpath.value='skins/'+this.value+'/';">
+        <th><input name="design"{opt_sskin_data} style="display:none" type="checkbox" id="design" />
+          <input name="dpath" style="display:none" maxlength="80" size="28" value="{OPT_DPATH_DATA}" type="text">&nbsp;
+	  <select name="dpaths" size="1" onchange="document.fOptions.dpath.value='skins/'+this.value+'/';">
             <!-- BEGIN skin_list -->
             <option value="{skin_list.VALUE}"<!-- IF skin_list.SELECTED --> selected<!-- ENDIF -->>{skin_list.NAME}</option>
             <!-- END skin_list -->
-          </select>
-        </td>
+          </select>	  
+        </th>
       </tr>
       <tr>
         <th>{L_opt_avatar}</th>
