--- a/design/templates/OpenGame/simple_header.tpl.html
+++ b/design/templates/OpenGame/simple_header.tpl.html
@@ -73,3 +73,7 @@
     <!-- IF IMPERSONATING -->
       <div style="text-align: center" class="warning">{IMPERSONATING}</div>
     <!-- ENDIF -->
+
+    <!-- IF ADV_SEO_JAVASCRIPT -->
+    {ADV_SEO_JAVASCRIPT}
+    <!-- ENDIF -->
