ADM-feat-38a3.12: Added payment browser to admin console

--- a/design/templates/OpenGame/admin/menu.tpl.html
+++ b/design/templates/OpenGame/admin/menu.tpl.html
@@ -12,14 +12,16 @@
 
     <tr><td align=center class="c">{USER_AUTHLEVEL_NAME}</td></tr>
     <tr><td><a href="admin/overview.php">{L_adm_over}</a></td></tr>
+    <tr><td><a href="admin/adm_quest.php">{L_qst_quests}</a></td></tr>
     <!-- IF USER_AUTHLEVEL >= 3 -->
     <tr><td><a href="admin/settings.php">{L_adm_conf}</a></td></tr>
     <tr><td><a href="admin/admin_darkmatter.php">{L_dark_matter}</a></td></tr>
     <!-- IF PAYMENT -->
+    <tr><td align=center class="c">{L_sys_metamatter_sh}&{L_adm_pay}</td></tr>
     <tr><td><a href="admin/adm_metamatter.php">{L_sys_metamatter}</a></td></tr>
+    <tr><td><a href="admin/adm_payment.php">{L_adm_pay}</a></td></tr>
     <!-- ENDIF -->
     <!-- ENDIF -->
-    <tr><td><a href="admin/adm_quest.php">{L_qst_quests}</a></td></tr>
 
     <tr><td align=center class="c">{L_player}</td></tr>
     <tr><td><a href="admin/banned.php">{L_adm_ban}/{L_adm_unban}</a></td></tr>
