SYS-misc-38a3.20: Menu and navbar can be also disabled from template's variables - not only by setting display() params

--- a/design/templates/OpenGame/menu.tpl.html
+++ b/design/templates/OpenGame/menu.tpl.html
@@ -1,3 +1,4 @@
+<!-- IF .menu -->
 <div id="sn_menu">
   <table width="100%" cellspacing="0" cellpadding="0" id="left_menu" align="left">
   <!-- BEGIN menu -->
@@ -36,3 +37,4 @@
   <!-- END menu -->
   </table>
 </div>
+<!-- ENDIF -->
