TPL-misc-38a4.19: Added support for server-specific CSS in skins

--- a/design/templates/OpenGame/simple_header.tpl.html
+++ b/design/templates/OpenGame/simple_header.tpl.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="{-path_prefix-}design/css/global-ie.css" />
     <![endif]-->
     <link rel="stylesheet" type="text/css" href="{-path_prefix-}{dpath}skin.css" />
+    <link rel="stylesheet" type="text/css" href="{-path_prefix-}{dpath}skin_server.css" />
     <!-- IF ADV_SEO_META_KEYWORDS -->
     <meta name="keywords" content="{ADV_SEO_META_KEYWORDS}" />
     <!-- ENDIF -->
