FLT-feat-38a7.0: Expeditions now gains xp and level - a-la succesfull raids

--- a/design/templates/OpenGame/imperator.tpl.html
+++ b/design/templates/OpenGame/imperator.tpl.html
@@ -53,6 +53,11 @@
     <th colspan="2" align="center">{L_sys_level}: {tech_lvl}</th>
   </tr>
   <tr>
+    <th>{L_imp_exploration}</th>
+    <th colspan="1" align="center">{L_ov_experience}: {explore_xp}/{explore_lvl_up}</th>
+    <th colspan="2" align="center">{L_sys_level}: {explore_lvl}</th>
+  </tr>
+  <tr>
     <th rowspan=2>{L_ov_raids}</th>
     <th colspan="1" align="center">{L_ov_experience}: {raid_xp}/{raid_lvl_up}</th>
     <th colspan="2" align="center">{L_sys_level}: {raid_lvl}</th>
