SYS-fix-38a7.2: Small fixes and updates

--- a/design/templates/OpenGame/dark_matter.tpl.html
+++ b/design/templates/OpenGame/dark_matter.tpl.html
@@ -1,5 +1,5 @@
-<!-- IF ! $TABLE_WIDTH -->
-  <!-- DEFINE $TABLE_WIDTH = "519px" -->
+<!-- IF ! $TABLE_WIDTH || $TABLE_WIDTH == 0 -->
+  <!-- DEFINE $TABLE_WIDTH = '519px' -->
   <h2>{PAGE_HEADER}</h2>
 <!-- ENDIF -->
 
