--- a/design/templates/OpenGame/metamatter.tpl.html
+++ b/design/templates/OpenGame/metamatter.tpl.html
@@ -1,5 +1,5 @@
 <!-- IF ! $TABLE_WIDTH -->
-  <!-- DEFINE $TABLE_WIDTH = "519px" -->
+  <!-- DEFINE $TABLE_WIDTH = '519px' -->
   <h2>{PAGE_HEADER}</h2>
 <!-- ENDIF -->
 
