--- a/design/templates/OpenGame/imperium.tpl.html
+++ b/design/templates/OpenGame/imperium.tpl.html
@@ -22,7 +22,7 @@
   </tr>
 
   <tr>
-    <th width="{$CELL_HEADER}">&nbsp;</th>
+    <th width="{$CELL_HEADER}">{L_sys_colonies} {COLONIES_CURRENT}/{COLONIES_MAX}</th>
     <!-- INCLUDE planet_list -->
   </tr>
 
