--- a/design/templates/OpenGame/imperator.tpl.html
+++ b/design/templates/OpenGame/imperator.tpl.html
@@ -1,41 +1,45 @@
-<script type="text/javascript"> 
-  jQuery.noConflict(); 
-</script> 
+<h2>{L_imp_imperator} {user_username}</h2>
+<h3>{L_sys_from} {REGISTRATION_DATE}</h3>
+<!-- IF USER_AVATAR --><img src="{D_SN_ROOT_VIRTUAL}/images/avatar/avatar_{USER_ID}.png"><!-- ENDIF -->
 
-<table width=519>
-  <!-- IF NEW_MESSAGES -->
+<!-- IF SAME_USER -->
+  <table width=519>
+    <!-- IF NEW_MESSAGES -->
     <tr><th class="c_c"><a href=messages.php>
       {L_ov_you_have}
       <!-- IF NEW_MESSAGES == 1 -->
-        {L_ov_new_message}
+      {L_ov_new_message}
       <!-- ELSE -->
-        {NEW_MESSAGES} {L_ov_new_messages}
+      {NEW_MESSAGES} {L_ov_new_messages}
       <!-- ENDIF -->
     </a></th></tr>
-  <!-- ENDIF -->
-</table>
+    <!-- ENDIF -->
+  </table>
 
-<!-- IF GAME_NEWS_OVERVIEW -->
+  <!-- IF GAME_NEWS_OVERVIEW -->
   <table width=519>
     <tr><td colspan=2 class="c">{L_news_title}</td></tr>
     <!-- INCLUDE news_list -->
   </table>
+  <!-- ENDIF -->
 <!-- ENDIF -->
 
 <table width=519>
+  <!--
   <tr>
     <th colspan=4 class="c_c">
       <span class="fl">{L_imp_imperator} {user_username} {L_sys_from} {REGISTRATION_DATE}</span>
       <span class="fr"></span>
     </th>
   </tr>
-  <!-- IF USER_AVATAR -->
+  <-- IF USER_AVATAR --
     <tr>
       <td class="c_c" colspan="4">
           <img src="{D_SN_ROOT_VIRTUAL}/images/avatar/avatar_{USER_ID}.png">
       </td>
     </tr>
-  <!-- ENDIF -->
+  <-- ENDIF --
+  -->
   <tr>
     <th colspan=4 class="c_c">
       <span class="fl">{L_imp_statistics}</span>
@@ -95,15 +99,18 @@
   </table>
 <!-- ENDIF -->
 
-<!-- IF USERBAR_URL -->
-  <table width="519" align="center">
-    <tr><td class="c">{L_aff_userbar}</td></tr>
-    <tr>
-      <th>
-        <img src="{USERBAR_URL}"><br><br>
-        {L_aff_userbar_bb}<br>
-        <input type="text" value="[img]{USERBAR_URL}[/img]" size="55">
-      </th>
-    </tr>
-  </table>
+
+<!-- IF SAME_USER -->
+  <!-- IF USERBAR_URL -->
+    <table width="519" align="center">
+      <tr><td class="c">{L_aff_userbar}</td></tr>
+      <tr>
+        <th>
+          <img src="{USERBAR_URL}"><br><br>
+          {L_aff_userbar_bb}<br>
+          <input type="text" value="[img]{USERBAR_URL}[/img]" size="55">
+        </th>
+      </tr>
+    </table>
+  <!-- ENDIF -->
 <!-- ENDIF -->
