--- a/design/templates/OpenGame/stat_statistics.tpl.html
+++ b/design/templates/OpenGame/stat_statistics.tpl.html
@@ -2,9 +2,9 @@
 <h2>{L_stat_refresh_last}&nbsp;{REFRESH_DATE}</h2>
 
 <!-- IF STATS_HIDE_PM_LINK && SUBJECT == 1 -->
-  <!-- DEFINE $HEADER_COLSPAN = '5' -->
-<!-- ELSE -->
   <!-- DEFINE $HEADER_COLSPAN = '6' -->
+<!-- ELSE -->
+  <!-- DEFINE $HEADER_COLSPAN = '7' -->
 <!-- ENDIF -->
 
 <table width="519">
@@ -38,15 +38,16 @@
     <th class ="c_c" width="30">{L_stat_rank_diff}</th>
 
     <!-- IF SUBJECT == 1 -->
-    <th class ="c_c">{L_sys_player}</th>
+      <th class ="c_c">{L_sys_player}</th>
+      <th class ="c_c"><img src="{dpath}icons/menu_empire_emperor.png" border="0" alt="{L_stat_details}" title="{L_stat_details}" /></th>
       <!-- IF ! STATS_HIDE_PM_LINK -->
-    <th class ="c_c"><img src="{dpath}img/m.gif" border="0" alt="{L_stat_message_write}" /></th>
+        <th class ="c_c"><img src="{dpath}img/m.gif" border="0" alt="{L_stat_message_write}" title="{L_stat_message_write}" /></th>
       <!-- ENDIF -->
-    <th class ="c_c">{L_sys_alliance}</th>
+      <th class ="c_c">{L_sys_alliance}</th>
     <!-- ELSE -->
-    <th class ="c_c">{L_sys_alliance}</th>
-    <th class ="c_c">{L_stat_members}</th>
-    <th class ="c_c">{L_stat_per_member}</th>
+      <th class ="c_c">{L_sys_alliance}</th>
+      <th class ="c_c">{L_stat_members}</th>
+      <th class ="c_c">{L_stat_per_member}</th>
     <!-- ENDIF -->
 
     <th class ="c_c">{L_stat_points}</th>
@@ -70,8 +71,17 @@
         <td class="c_l<!-- IF USER_ID == stat.ID --> same_player<!-- ENDIF -->">
           {stat.NAME}
         </td>
+        <td class ="c_c">
+          <a href="index.php?page=imperator&int_user_id={stat.ID}">
+            <img src="{dpath}icons/menu_empire_emperor.png" border="0" alt="{L_stat_details}" title="{L_stat_details}"  />
+          </a>
+        </td>
         <!-- IF ! STATS_HIDE_PM_LINK -->
-        <td class="c_c"><a href="messages.php?mode=write&id={stat.ID}"><img src="{dpath}img/m.gif" border="0" alt="{L_stat_message_write}" /></a></td>
+        <td class="c_c">
+          <a href="messages.php?mode=write&id={stat.ID}">
+            <img src="{dpath}img/m.gif" border="0" alt="{L_stat_message_write}" title="{L_stat_message_write}" />
+          </a>
+        </td>
         <!-- ENDIF -->
         <td class="c_l"><!-- IF stat.ALLY_ID --><a href="alliance.php?mode=ainfo&a={stat.ALLY_ID}"><span class="<!-- IF USER_ALLY == stat.ALLY_ID -->same_alliance<!-- ENDIF -->">{stat.ALLY_NAME}</span></a><!-- ELSE -->&nbsp;<!-- ENDIF --></td>
       <!-- ELSE -->
