--- a/design/templates/OpenGame/menu.tpl.html
+++ b/design/templates/OpenGame/menu.tpl.html
@@ -37,4 +37,8 @@
   <!-- END menu -->
   </table>
 </div>
+
+<script type="text/javascript"><!--
+sn_timers.unshift({'id': 'menu_admin_server_time', 'type': 2, 'active': true, 'start_time': {TIME_NOW}, options: 3});
+// --></script>
 <!-- ENDIF -->
