ADM-feat-38a9.0: Several admin pages fully rewrote

--- a/design/templates/OpenGame/admin/add_moon.tpl.html
+++ b/design/templates/OpenGame/admin/add_moon.tpl.html
@@ -1,17 +1,23 @@
-<br><br>
-<h2>{addm_title}</h2>
+<h2>{L_addm_title}</h2>
+
 <form action="" method="post">
-<input type="hidden" name="mode" value="addit">
-<table width="320" border="0" cellspacing="2" cellpadding="0" style="color:#FFFFFF">
-<tr>
-	<td class="c" colspan="6">{addm_addform}</td>
-</tr><tr>
-	<th width="150">{addm_playerid}</th>
-	<th width="0%"><input type="text" name="user" size="3"></th>
-</tr><tr>
-	<th>{addm_moonname}</th>
-	<th><input type="text" name="name"></th>
-</tr><tr>
-	<th colspan="2"><input type="submit" value="{addm_moondoit}"></th>
-</table>
+  <input type="hidden" name="mode" value="addit">
+
+  <table width="320" border="0" cellspacing="2" cellpadding="0" style="color:#FFFFFF">
+  <tr>
+    <td class="c" colspan="6">{L_addm_addform}</td>
+  </tr>
+  <tr>
+    <th width="150">{L_addm_playerid}</th>
+    <th width="0%"><input type="text" name="user" size="3"></th>
+  </tr>
+
+  <tr>
+    <th>{L_addm_moonname}</th>
+    <th><input type="text" name="name"></th>
+  </tr>
+
+  <tr>
+    <th colspan="2"><input type="submit" value="{L_addm_moondoit}"></th>
+  </table>
 </form>
