--- a/design/templates/OpenGame/admin/admin_chat.tpl.html
+++ b/design/templates/OpenGame/admin/admin_chat.tpl.html
@@ -1,10 +1,6 @@
-<br><br>
 <h2>{adm_ch_ttle}</h2>
 <table width="100%">
-<tr>
-<td class="c" colspan="5">{adm_ch_list} [<a href="admin/admin_chat.php?deleteall=yes">{adm_ch_clear}</a>]</td>
-</tr>
-<tr>
+<tr class="c_c">
 <th>{adm_ch_idmsg}</th>
 <th>{adm_ch_time}</th>
 <th>{adm_ch_play}</th>
@@ -12,5 +8,5 @@
 <th width="16px"><img src="design/images/r1.png"></th>
 </tr>
 {msg_list}
-<tr><th class=b colspan=5>{msg_num}&nbsp;{adm_ch_nbs}</th></tr>
+<tr><th class=b colspan=5>{msg_num}&nbsp;{adm_ch_nbs} [<a href="admin/admin_chat.php?deleteall=yes">{adm_ch_clear}</a>]</th></tr>
 </table>
