--- a/design/css/global.css
+++ b/design/css/global.css
@@ -3,9 +3,9 @@ body
   overflow-y: scroll;
 }
 
-body, form
+body, form, iframe, html
 {
-  margin: 0; padding: 0;
+  margin: 0; padding: 0; border: 0;
 }
 
 input.button
@@ -552,4 +552,11 @@ th.c_j, td.c_j
 
 #menu_admin_server_time, #menu_admin_version_info {
   text-align: center;
+}
+
+.chat_message {
+  text-align: left;
+  background-color:black;
+  color:white;
+  font-weight: normal;
 }
