--- a/design/templates/OpenGame/admin/adm_metamatter.tpl.html
+++ b/design/templates/OpenGame/admin/adm_metamatter.tpl.html
@@ -1,20 +1,20 @@
 <h2>{L_adm_mm_title}</h2>
+
 <form action="" method="post">
   <table width="305"><tbody>
-    <tr><td class="c" colspan="2">{L_adm_mm_title}</td></tr>
-    <tr>
-      <th>{L_adm_mm_user}</th>
-      <th><input name="id_user" type="text" value="{id_user}"/></th>
+    <tr class="c_c"><th colspan="2">{L_adm_mm_title}</th></tr>
+    <tr class="c_c">
+      <td>{L_adm_mm_user}</td>
+      <td><input name="id_user" type="text" value="{ID_USER}"/></td>
     </tr>
-    <tr>
-      <th>{L_sys_metamatter}</th>
-      <th><input name="points" type="text" value="{points}" /></th>
+    <tr class="c_c">
+      <td>{L_sys_metamatter}</td>
+      <td><input name="points" type="text" value="{POINTS}" /></td>
     </tr>
-    <tr>
-      <th>{L_adm_reason}</th>
-      <th><input name="reason" type="text" value="{reason}" /></th>
+    <tr class="c_c">
+      <td>{L_adm_reason}</td>
+      <td><input name="reason" type="text" value="{REASON}" /></td>
     </tr>
-    <tr><th colspan="2"><input type="Submit" value="{L_adm_apply}" /></th></tr>
+    <tr class="c_c"><th colspan="2"><input type="Submit" value="{L_adm_apply}" /></th></tr>
   </tbody></table>
 </form>
-{message}
