--- a/design/templates/OpenGame/admin/admin_darkmatter.tpl.html
+++ b/design/templates/OpenGame/admin/admin_darkmatter.tpl.html
@@ -1,25 +1,25 @@
 <h2>{L_adm_dm_title}</h2>
+
 <form action="" method="post">
   <table width="305"><tbody>
     <tr><td class="c" colspan="2">{L_adm_dm_title}</td></tr>
     <tr>
       <th>{L_adm_dm_user}</th>
-      <th><input name="id_user" type="text" value="{id_user}"/></th>
+      <th><input name="id_user" type="text" value="{ID_USER}"/></th>
     </tr>
     <tr><td class="c" colspan="2">{L_adm_dm_oruser}</td></tr>
     <tr>
       <th>{L_adm_dm_planet}</th>
-      <th><input name="id_planet" type="text" value="{id_planet}"/></th>
+      <th><input name="id_planet" type="text" value="{ID_PLANET}"/></th>
     </tr>
     <tr>
       <th>{L_dark_matter}</th>
-      <th><input name="points" type="text" value="{points}" /></th>
+      <th><input name="points" type="text" value="{POINTS}" /></th>
     </tr>
     <tr>
       <th>{L_adm_reason}</th>
-      <th><input name="reason" type="text" value="{reason}" /></th>
+      <th><input name="reason" type="text" value="{REASON}" /></th>
     </tr>
     <tr><th colspan="2"><input type="Submit" value="{L_adm_apply}" /></th></tr>
   </tbody></table>
 </form>
-{message}
